add form improved

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Space Flight Manager</title>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Space Flight Manager</h1>
+<div class="navbar">
+    <div class="navbar-inner">
+        <a class="brand" href="#">Space Flight Manager </a>
+    </div>
 <br>
 <a href="/touristPage/">Tourists List</a>
 <br>
