--- a/src/main/webapp/touristPage/WEB-INF/views/touristsPage.html
+++ b/src/main/webapp/touristPage/WEB-INF/views/touristsPage.html
@@ -44,7 +44,7 @@
 <div id="add" class="modal hide fade" tabindex="=1" role="dialog" aria-labelledby="addDialogLabel" aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="addDialogLabel">Add Task</h3>
+        <h3 id="addDialogLabel">Add Tourist</h3>
     </div>
     <div class="modal-body">
         <form class="form-horizontal">
@@ -96,7 +96,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button data-bind="click: addTask" class="btn btn-primary">Add Task</button>
+        <button data-bind="click: addTask" class="btn btn-primary">Add Tourist</button>
         <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
     </div>
 </div>
@@ -112,12 +112,13 @@
             var request = {
                 url: uri,
                 type: method,
-                //contentType: "application/json",
+                contentType: "application/json",
                 //accepts: "application/json",
                 cache: false,
-                dataType: 'json',
+                //dataType: 'json',
                 data: JSON.stringify(data),
                 error: function (jqXHR) {
+
                     console.log("ajax error " + jqXHR.status);
                 }
             };
@@ -157,13 +158,15 @@
 
         self.add = function (task) {
             self.ajax(self.touristsURI, 'POST', task).done(function (data) {
+                console.log(data.toString());
                 self.tourists.push({
-                    name: ko.observable(data.task.name),
-                    surname: ko.observable(data.task.surname),
-                    sex: ko.observable(data.task.sex),
-                    country: ko.observable(data.task.country),
-                    notes: ko.observable(data.task.notes),
-                    dateOfBirth: ko.observable(data.task.dateOfBirth)
+                    id:ko.observable(data.id),
+                    name: ko.observable(data.name),
+                    surname: ko.observable(data.surname),
+                    sex: ko.observable(data.sex),
+                    country: ko.observable(data.country),
+                    notes: ko.observable(data.notes),
+                    dateOfBirth: ko.observable(data.dateOfBirth)
                 });
             });
         }
