flight page init

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -10,8 +10,12 @@
     <div class="navbar-inner">
         <a class="brand" href="#">Space Flight Manager </a>
     </div>
+</div>
+
 <br>
-<a href="/touristPage/">Tourists List</a>
+<a href="../../touristsPage.html">Tourists List</a>
 <br>
+<br>
+<a href="flightsPage.html">Flights List</a>
 </body>
 </html>
