--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Space Flight Manager</title>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
+
+
 </head>
 <body>
 <div class="navbar">
     <div class="navbar-inner">
         <a class="brand" href="#">Space Flight Manager </a>
+        <a class="btn" href="touristsPage.html">Tourists Page</a>
+        <a class="btn" href="flightsPage.html">Flights Page</a>
     </div>
 </div>
 
-<br>
-<a href="../../touristsPage.html">Tourists List</a>
-<br>
-<br>
-<a href="flightsPage.html">Flights List</a>
 </body>
 </html>
